# semantic-editor.old2

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  config-overrides.js  keymap.org  package.json  rust-toolchain  tsconfig.json
.circleci/: config.yml
public/: index.html  manifest.json
scripts/: run-wasm-bindgen  run-wasm-gc  run-wasm2es6js
semantic/: Cargo.toml
semantic-derive/: Cargo.toml
semantic-derive/src/: lib.rs
semantic/src/: lib.rs
src/: App.test.tsx  App.tsx  api.rs  browser_log.rs  core.ts  error.rs  ffi.ts  lib.rs  model.ts  registerServiceWorker.js  version.rs  wasm.ts  wasm_api.rs
src/actions/: data.ts  file-tree.ts  index.ts  util.ts
src/components/: MainEditor.tsx  NavbarMenu.tsx  OpenDialog.tsx
src/content/: markdown.rs  mod.rs
src/core/: editor.rs  logger.rs  mod.rs  options.rs  standalone.rs
src/core/server/: mod.rs  standalone.rs
src/data/: markdown.rs  mod.rs
src/executor/: ffi.rs  ffi.ts  mod.rs
src/executor/current_thread/: mod.rs  scheduler.rs
src/executor/sys/: mod.rs
src/executor/sys/default/: mod.rs
src/executor/sys/wasm/: ffi.rs  ffi.ts  mod.rs
src/executor/sys/wasm/current_thread/: mod.rs  scheduler.rs
src/logger/: ffi.rs  ffi.ts  mod.rs
src/reducers/: data.ts  file-tree.ts  index.ts
src/rpc/: error.rs  ffi.rs  mod.rs  websocket.rs  websocket.ts
src/rpc/http/: ffi.rs  ffi.ts  mod.rs
src/rpc/websocket/: ffi.rs  ffi.ts  mod.rs
src/scheduler/: ffi.rs  ffi.ts  mod.rs
src/schema/: mod.rs
src/schema/se/: mod.rs
src/schema/se/action/: action.proto  mod.rs
src/schema/se/data/: format.proto  mod.rs
src/schema/se/service/: mod.rs  service.proto
src/schema/se/slate/: mod.rs  schema.proto
src/schema/se/transport/: mod.rs  transport.proto
src/schema/se/websocket/: mod.rs  websocket.proto
src/types/: slate-react.d.ts  slate.d.ts
