[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
name = "semantic-editor"
publish = false
version = "0.1.0"

[build-dependencies]
brotli = "1.2.0"
bytesize = "0.2.0"
failure = "0.1.1"
heck = "0.3.0"
prost-build = "0.3.2"
prost-simple-rpc-build = "0.2.1"
vergen = "0.1.1"
walkdir = "2.1.4"

[dependencies]
bytes = "0.4.6"
failure = "0.1.1"
futures = "0.1.18"
prost = "0.3.2"
prost-derive = "0.3.2"
prost-simple-rpc = "0.2.1"
pulldown-cmark = "0.1.2"
slog-scope = "4.0.1"
slog-stdlog = "3.0.2"
tokio-executor = "0.1.1"
uuid = "0.6.1"

[dependencies.clippy]
optional = true
version = "0.0.191"

[dependencies.futures-await]
branch = "0.1"
git = "https://github.com/ngg/futures-await"
version = "0.1"

[dependencies.semantic]
path = "semantic"

[dependencies.semantic-derive]
path = "semantic-derive"

[dependencies.slog]
features = ["max_level_trace", "release_max_level_trace"]
version = "2.2.3"

[dependencies.wasm-bindgen]
git = "https://github.com/alexcrichton/wasm-bindgen"
rev = "e6a483f906fd249296ffe60c1b2898559d3408a2"

[features]
default = []
journald = ["slog-journald"]
lint = ["clippy"]
standalone = []
syslog = ["slog-syslog"]

[lib]
crate-type = ["cdylib", "rlib"]

[patch]

[patch.crates-io]

[patch.crates-io.prost]
branch = "nightly-proc-macro2"
git = "https://github.com/ngg/prost.git"

[patch.crates-io.prost-build]
branch = "nightly-proc-macro2"
git = "https://github.com/ngg/prost.git"

[patch.crates-io.prost-derive]
branch = "nightly-proc-macro2"
git = "https://github.com/ngg/prost.git"

[patch.crates-io.prost-types]
branch = "nightly-proc-macro2"
git = "https://github.com/ngg/prost.git"

[profile.release]
lto = true

[target]

[target."cfg(not(target_arch = \"wasm32\"))"]

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
brotli-decompressor = "1.2.1"
hyper = "0.11.24"
lazy_static = "1.0.0"
mime = "0.3.5"
slog-async = "2.2.0"
slog-json = "2.2.0"
slog-term = "2.3.0"
structopt = "0.2.6"
tokio = "0.1.4"
unicase = "2.1.0"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies.slog-journald]
optional = true
version = "2.0.0"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies.slog-syslog]
optional = true
version = "0.11.0"

[workspace]
members = ["semantic", "semantic-derive"]
