[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
name = "semantic-editor"
publish = false
version = "0.1.0"

[build-dependencies]
brotli = "1.2.0"
bytesize = "0.2.0"
failure = "0.1.1"
heck = "0.3.0"
prost-build = "0.3.2"
prost-simple-rpc-build = "0.2.1"
vergen = "0.1.1"
walkdir = "2.1.4"

[dependencies]
bytes = "0.4.6"
failure = "0.1.1"
futures = "0.2.0"
futures-await = "0.1.1"
prost = "0.3.2"
prost-derive = "0.3.2"
prost-simple-rpc = "0.2.1"
pulldown-cmark = "0.1.2"
slog-scope = "4.0.1"
slog-stdlog = "3.0.2"
tokio-executor = "0.1.2"
uuid = "0.6.2"
type-info = "0.2.1"
type-info-derive = "0.2.0"

[dependencies.clippy]
optional = true
version = "0.0.193"

[dependencies.semantic]
path = "semantic"

[dependencies.semantic-derive]
path = "semantic-derive"

[dependencies.slog]
features = [
    "max_level_trace",
    "release_max_level_trace",
]
version = "2.2.3"

[dependencies.wasm-bindgen]
git = "https://github.com/alexcrichton/wasm-bindgen"
rev = "9976971e7e5461a657f605dee08d7fb93e48f0fd"

[features]
default = []
journald = ["slog-journald"]
lint = ["clippy"]
standalone = []
syslog = ["slog-syslog"]

[lib]
crate-type = [
    "cdylib",
    "rlib",
]
[patch.crates-io.prost]
git = "https://github.com/danburkert/prost.git"

[patch.crates-io.prost-build]
git = "https://github.com/danburkert/prost.git"

[patch.crates-io.prost-derive]
git = "https://github.com/danburkert/prost.git"

[patch.crates-io.prost-types]
git = "https://github.com/danburkert/prost.git"
[profile.release]
lto = true
[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
brotli-decompressor = "1.2.1"
hyper = "0.11.25"
lazy_static = "1.0.0"
mime = "0.3.5"
slog-async = "2.3.0"
slog-json = "2.2.0"
slog-term = "2.4.0"
structopt = "0.2.7"
tokio = "0.1.5"
unicase = "2.1.0"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies.slog-journald]
optional = true
version = "2.0.0"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies.slog-syslog]
optional = true
version = "0.11.0"

[workspace]
members = [
    "semantic",
    "semantic-derive",
]
