[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
name = "semantic-editor"
publish = false
version = "0.1.0"

[build-dependencies]
brotli = "2.5.0"
bytesize = "1.0.0"
failure = "0.1.2"
heck = "0.3.0"
prost-build = "0.4.0"
prost-simple-rpc-build = "0.3.0"
vergen = "2.0.0"
walkdir = "2.2.5"

[dependencies]
bytes = "0.4.9"
failure = "0.1.2"
futures-await = "0.1.1"
prost = "0.4.0"
prost-derive = "0.4.0"
prost-simple-rpc = "0.3.0"
pulldown-cmark = "0.1.2"
slog-scope = "4.0.1"
slog-stdlog = "3.0.2"
tokio-executor = "0.1.4"
uuid = "0.6.5"
type-info = "0.2.1"
type-info-derive = "0.2.0"
wasm-bindgen = "0.2.17"
wasm-bindgen-futures = "0.2.19"
js-sys = "0.2.4"

[dependencies.semantic]
path = "semantic"

[dependencies.semantic-derive]
path = "semantic-derive"

[dependencies.slog]
features = [
    "max_level_trace",
    "release_max_level_trace",
]
version = "2.3.2"

[features]
default = []
journald = ["slog-journald"]
lint = []
standalone = []
syslog = ["slog-syslog"]

[lib]
crate-type = [
    "cdylib",
    "rlib",
]

[profile.release]
lto = true
[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
brotli-decompressor = "1.3.1"
hyper = "0.12.8"
slog-async = "2.3.0"
slog-json = "2.2.0"
slog-term = "2.4.0"
structopt = "0.2.10"
tokio = "0.1.8"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies.slog-journald]
optional = true
version = "2.0.0"

[target."cfg(not(target_arch = \"wasm32\"))".dependencies.slog-syslog]
optional = true
version = "0.11.0"

[workspace]
members = [
    "semantic",
    "semantic-derive",
]
