[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
name = "semantic-derive"
publish = false
version = "0.1.0"

[dependencies]
proc-macro2 = {version = "0.3.1", features = ["nightly"]}
quote = "0.4.2"
syn = "0.12.13"

[dependencies.semantic]
path = "../semantic"

[lib]
proc-macro = true
