[package]
authors = ["David Flemström <david.flemstrom@gmail.com>"]
name = "semantic-derive"
publish = false
version = "0.1.0"

[dependencies]
proc-macro2 = { version = "0.4.13", features = ["nightly"] }
quote = "0.6.8"
syn = "0.14.9"

[dependencies.semantic]
path = "../semantic"

[lib]
proc-macro = true
